// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderBottomColor renders 0 1`] = `
Array [
  .c0 {
  border-bottom-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-color: #0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomColor renders function 1`] = `
Array [
  .c0 {
  border-bottom-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-color: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-color: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomColor renders invalid theme path 1`] = `
Array [
  .c0 {
  border-bottom-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-color: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomColor renders negative number 1`] = `
Array [
  .c0 {
  border-bottom-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-color: #-42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-color: #-42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomColor renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  border-bottom-color: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-color: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-color: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom-color: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-color: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-color: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-color: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom-color: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-color: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-color: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-color: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-color: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom-color: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-color: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-color: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-color: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-color: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom-color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomColor renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-bottom-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-bottom-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom-color: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom-color: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomColor renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  border-bottom-color: July;
}

@media May {
  .c0 {
    border-bottom-color: August;
  }
}

@media April {
  .c0 {
    border-bottom-color: September;
  }
}

@media January {
  .c0 {
    border-bottom-color: November;
  }
}

@media April {
  .c0 {
    border-bottom-color: August;
  }
}

@media June {
  .c0 {
    border-bottom-color: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-color: July;
}

@media May {
  .c0 {
    border-bottom-color: August;
  }
}

@media April {
  .c0 {
    border-bottom-color: September;
  }
}

@media January {
  .c0 {
    border-bottom-color: November;
  }
}

@media April {
  .c0 {
    border-bottom-color: August;
  }
}

@media June {
  .c0 {
    border-bottom-color: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-color: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-bottom-color: November;
  }
}

@media April {
  .c0 {
    border-bottom-color: January;
  }
}

@media January {
  .c0 {
    border-bottom-color: December;
  }
}

@media April {
  .c0 {
    border-bottom-color: April;
  }
}

@media June {
  .c0 {
    border-bottom-color: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-color: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-bottom-color: November;
  }
}

@media April {
  .c0 {
    border-bottom-color: January;
  }
}

@media January {
  .c0 {
    border-bottom-color: December;
  }
}

@media April {
  .c0 {
    border-bottom-color: April;
  }
}

@media June {
  .c0 {
    border-bottom-color: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomColor renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    border-bottom-color: July;
  }
}

@media April {
  .c0 {
    border-bottom-color: August;
  }
}

@media January {
  .c0 {
    border-bottom-color: September;
  }
}

@media April {
  .c0 {
    border-bottom-color: November;
  }
}

@media June {
  .c0 {
    border-bottom-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-bottom-color: July;
  }
}

@media April {
  .c0 {
    border-bottom-color: August;
  }
}

@media January {
  .c0 {
    border-bottom-color: September;
  }
}

@media April {
  .c0 {
    border-bottom-color: November;
  }
}

@media June {
  .c0 {
    border-bottom-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-bottom-color: January;
  }
}

@media April {
  .c0 {
    border-bottom-color: December;
  }
}

@media January {
  .c0 {
    border-bottom-color: April;
  }
}

@media April {
  .c0 {
    border-bottom-color: May;
  }
}

@media June {
  .c0 {
    border-bottom-color: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-bottom-color: January;
  }
}

@media April {
  .c0 {
    border-bottom-color: December;
  }
}

@media January {
  .c0 {
    border-bottom-color: April;
  }
}

@media April {
  .c0 {
    border-bottom-color: May;
  }
}

@media June {
  .c0 {
    border-bottom-color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomColor renders postitive number 1`] = `
Array [
  .c0 {
  border-bottom-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-color: #42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-color: #42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomColor renders string 1`] = `
Array [
  .c0 {
  border-bottom-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-color: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-color: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomColor renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`borderBottomColor renders valid theme path 1`] = `
Array [
  .c0 {
  border-bottom-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
